# ssc-kata-vendingmachine

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: CMakeLists.txt  Coin.cpp  Coin.h  CoinStore.cpp  CoinStore.h  VendingMachine.cpp  VendingMachine.h  main.cpp
tst/: CMakeLists.txt  CoinStoreTest.cpp  Setup_test.cpp  VendingMachineTest.cpp
